ubiquity (1.13.5) UNRELEASED; urgency=low

  * Factor out /etc/casper.conf parsing from ubiquity-dm to a separate
    Python module, with a few corner-case bugs fixed along the way.
  * Honour LIVE_MEDIA_PATH in /etc/casper.conf when looking for files
    normally found under /cdrom/casper.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 15 Jun 2009 19:36:53 +0100

ubiquity (1.13.4) karmic; urgency=low

  * Automatic update of included source packages: grub-installer
    1.37ubuntu3.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 12 Jun 2009 21:48:34 +0100

ubiquity (1.13.3) karmic; urgency=low

  * Recommend grub-pc | grub rather than the other way round, since GRUB 2
    is now the default.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 10 Jun 2009 17:39:50 +0100

ubiquity (1.13.2) karmic; urgency=low

  [ Mario Limonciello ]
  * Update location of Mythbuntu symlinked glade file for changes in
    new mythbuntu-common.
  * Update location of Mythbuntu example configuration files for changes
    in mythbuntu-common.

  [ Colin Watson ]
  * If devkit-disks is available, use that for desktop storage locking
    rather than hal-lock.
  * Automatic update of included source packages: grub-installer
    1.37ubuntu2.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 08 Jun 2009 22:17:06 +0100

ubiquity (1.13.1) karmic; urgency=low

  [ Mario Limonciello ]
  * Drop custom recipe for Mythbuntu as XFS will no longer be necessary
    for recordings with switching to ext4.

  [ Colin Watson ]
  * Add support for setting pkgsel/language-packs to "ALL", to install
    everything available on the installation media (LP: #371470).
  * Install block-attr from debian-installer-utils 1.68.
  * Fix the intro message to have the correct release version and date.
  * Various minor adjustments to cope with ext4 now being the default
    filesystem.
  * Use block-attr rather than vol_id.
  * Automatic update of included source packages: base-installer